core/kustomize/overlay/7.3.0/defaults/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ig
spec:
  template:
    spec:
      containers:
      - name: ig
        imagePullPolicy: Always
        volumeMounts:
          - name: new-truststore
            mountPath: /var/ig/secrets/truststore
            readOnly: true
      volumes:
        # Empty volume where the igtruststore will be created by the initContainer, it can then be mounted into the ig container
        - name: new-truststore
          emptyDir: { }
        - name: ig-truststore-pem
          secret:
            optional: false
            secretName: ig-truststore-pem
